--- a/index.html
+++ b/index.html
@@ -149,11 +149,10 @@
 
                 <div class="py-3" style="background-color: rgba(0, 0, 0, 0.6)">
 
-                    <div class="container text-center text-white">
-
-                        <h4 style="color:#ce7209; font-family: 'Paytone One', sans-serif;">OBTEN TUS SKINS TOTALMENTE <span
-                                class="text-danger font-weight-bold alternative-font-2">GRATIS!</span></h4>
+                    <div class="container text-center mb-3">
+                        <img src="assets/resources/img/freefire_sin_fondo.png" width="250px" alt="">
                     </div>
+                    
 
                     <div class="row justify-content-center sticky-top">
                         <div class="col-8 col-md-6 col-lg-7">
