--- a/index.html
+++ b/index.html
@@ -142,24 +142,23 @@
         </div>
         <div role="main" class="main">
 
-            <div class="container d-flex align-items-center col-10 col-md-8 col-lg-3 py-3" style="height: 100vh">
+            <div class="container d-flex align-items-center col-12 col-md-8 col-lg-3 py-3" style="height: 80vh">
 
                 <div id="overlay"></div>
                 <img id="gifElement" src="assets/resources/video/animation.gif" alt="GIF animado">
 
-                <div class="py-3" style="background-color: rgba(0, 0, 0, 0.6)">
+                <div class="py-3">
 
                     <div class="container text-center mb-3">
                         <img src="assets/resources/img/freefire_sin_fondo.png" width="250px" alt="">
                     </div>
-                    
 
                     <div class="row justify-content-center sticky-top">
-                        <div class="col-8 col-md-6 col-lg-7">
-                            <div class="input-group mb-3 neon-border py-1" style="background-color: #9f9f9f;">
+                        <div class="col-10 col-md-9 col-lg-9">
+                            <div class="input-group mb-3 neon-border" style="background-color: #9f9f9f;">
                                 <span class="input-group-text" id="basic-addon1"
                                     style="background-color: #9f9f9f; border: none">
-                                    <img src="assets/resources/img/icon-user.png" width="22px" alt="">
+                                    <img src="assets/resources/img/icon-user.png" width="24px" alt="">
                                     <span class="ml-1 text-white"
                                         style="font-family: 'Paytone One', sans-serif; font-size: 1rem">ID</span>
                                 </span>
@@ -179,7 +178,7 @@
                             data-sort-id="portfolio">
 
 
-                            <div class="col-4 isotope-item brands">
+                            <div class="col-6 isotope-item brands">
                                 <div class="portfolio-item">
                                     <a href="javascript:void(0)">
                                         <span class="">
@@ -193,7 +192,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 isotope-item brands">
+                            <div class="col-6 isotope-item brands">
                                 <div class="portfolio-item">
                                     <a href="javascript:void(0)">
                                         <span class="">
@@ -207,7 +206,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 isotope-item brands">
+                            <div class="col-6 isotope-item brands">
                                 <div class="portfolio-item">
                                     <a href="javascript:void(0)">
                                         <span class="">
@@ -221,7 +220,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 isotope-item brands">
+                            <div class="col-6 isotope-item brands">
                                 <div class="portfolio-item">
                                     <a href="javascript:void(0)">
                                         <span class="">
@@ -235,7 +234,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 isotope-item brands">
+                            <div class="col-6 isotope-item brands">
                                 <div class="portfolio-item">
                                     <a href="javascript:void(0)">
                                         <span class="">
@@ -249,7 +248,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 isotope-item brands">
+                            <div class="col-6 isotope-item brands">
                                 <div class="portfolio-item">
                                     <a href="javascript:void(0)">
                                         <span class="">
@@ -263,7 +262,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 isotope-item brands">
+                            <div class="col-6 isotope-item brands">
                                 <div class="portfolio-item">
                                     <a href="javascript:void(0)">
                                         <span class="">
@@ -277,7 +276,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 isotope-item brands">
+                            <div class="col-6 isotope-item brands">
                                 <div class="portfolio-item">
                                     <a href="javascript:void(0)">
                                         <span class="">
@@ -291,7 +290,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-4 isotope-item brands">
+                            <div class="col-6 isotope-item brands">
                                 <div class="portfolio-item">
                                     <a href="javascript:void(0)">
                                         <span class="">
@@ -462,6 +461,8 @@
                         </div>
                     </div>
 
+                    <hr>
+
                     <div class="row justify-content-center my-2">
                         <button id="generate" type="button" class="btn btn-xs btn-dark mt-1"
                             style="border-radius: 1%; background-color: rgb(255, 123, 52)">
@@ -474,9 +475,12 @@
             </div>
 
             <footer>
-                <div class="container-fluid" style="padding: 0; margin: 0;">
-                    <img src="assets/resources/img/footer.jpeg" alt="" style="width: 100%; display: block;">
+                <div class="mt-auto pt-5">
+                    <div class="container-fluid" style="padding: 0; margin: 0;">
+                        <img src="assets/resources/img/footer.jpeg" alt="" style="width: 100%; display: block;">
+                    </div>
                 </div>
+               
             </footer>
 
         </div>
